force-app/main/default/objects/Key_Method__c/Key_Method__c.object-meta.xml
<CustomObject>
    <description>Each account plan can have one or more Key Methods identified. Each key method can have one annual sample volume value associated. The key method is a child record of the account plan record and can not be an orphan record.</description>
    <label>Key Method</label>
    <nameField>
        <displayFormat>KM-{00}</displayFormat>
        <label>Key Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>