force-app/main/default/objects/Key_Method__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <description>Each key method is associated to an account plan</description>
    <inlineHelpText>Each key method is associated to an account plan</inlineHelpText>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Key Methods</relationshipLabel>
    <relationshipName>Key_Methods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>