force-app/main/default/objects/Key_Method__c/fields/Estimated_Annual_Sample_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Sample_Volume__c</fullName>
    <description>Based on what was selected for key methods please provide you best estimate for annual sample volume.</description>
    <inlineHelpText>Based on what was selected for key methods please provide your best estimate for annual sample volume. This may be challenging to estimate so please only enter a value if you have confidence and it is ok if it is only an estimate. This is not a required field.</inlineHelpText>
    <label>Estimated Annual Sample Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>