force-app/main/default/objects/Key_Method__c/fields/Key_Method__c.field-meta.xml
<CustomField>
    <fullName>Key_Method__c</fullName>
    <description>What are the primary and secondary applications the customer is running.</description>
    <inlineHelpText>What are the primary and secondary applications the customer is running?</inlineHelpText>
    <label>Key Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancer Research</fullName>
            </value>
            <value>
                <fullName>Chromatin Accessibility</fullName>
            </value>
            <value>
                <fullName>Circulating RNA Profiling</fullName>
            </value>
            <value>
                <fullName>Circulating Tumor DNA Profiling</fullName>
            </value>
            <value>
                <fullName>Comprehensive Genomic Profiling</fullName>
            </value>
            <value>
                <fullName>Epigenetics</fullName>
            </value>
            <value>
                <fullName>Human Whole-Genome Sequencing</fullName>
            </value>
            <value>
                <fullName>Methylation Sequencing</fullName>
            </value>
            <value>
                <fullName>Multiomics</fullName>
            </value>
            <value>
                <fullName>Population-Scale Studies</fullName>
            </value>
            <value>
                <fullName>Proteomics</fullName>
            </value>
            <value>
                <fullName>Single-Cell Gene Expression</fullName>
            </value>
            <value>
                <fullName>Spatial Transcriptomics</fullName>
            </value>
            <value>
                <fullName>Transcriptomics</fullName>
            </value>
            <value>
                <fullName>Tumor-Normal Sequencing</fullName>
            </value>
            <value>
                <fullName>Whole-Exome Sequencing</fullName>
            </value>
            <value>
                <fullName>Targeted Resequencing with Enrichment</fullName>
            </value>
            <value>
                <fullName>Amplicon Sequencing</fullName>
            </value>
            <value>
                <fullName>Microbial Whole Genome sequencing</fullName>
            </value>
            <value>
                <fullName>Shotgun Metagenomics</fullName>
            </value>
            <value>
                <fullName>Liquid biopsy</fullName>
            </value>
            <value>
                <fullName>Immune profiling</fullName>
            </value>
            <value>
                <fullName>NIPT</fullName>
            </value>
            <value>
                <fullName>Preimplantation Genetic Screening/Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>